Added client.js Functions

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,19 @@
 
 </head>
 <body>
+    <h1>Weekend Challenge 2</h1>
+    <div>
+        <input type="number" placeholder="Value X" id="input1">
+        <button id="addtionBtn">+</button>
+        <button id="subtractBtn">-</button>
+        <button id="multiplyBtn">*</button>
+        <button id="divideBtn">/</button>
+    </div>
+    <div>
+        <input type="number" placeholder="Value Y" id="input2">
+    </div>
+    <div class="urAnswer">Your Answer = </div>
+
     
 </body>
 </html>
