Working on Clear Button, Everything else Works

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,8 +21,15 @@
     </div>
     <div>
         <input type="number" placeholder="Value Y" id="input2">
+        <button id="clearBtn">Clear</button>
     </div>
-    <div class="urAnswer">Your Answer = </div>
+    <table>
+        <thead><tr><th>Equation History</th></tr></thead>
+        <tbody id="equationHistory">
+            <tr class="newRow"></tr>
+        </tbody>
+    </table>
+
 
     
 </body>
