Finished Base Mode

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,15 +12,17 @@
 </head>
 <body>
     <h1>Weekend Challenge 2</h1>
+    <form id="calulatorForm">
+            <input type="number" placeholder="Value X" id="input1">
+            <input type="number" placeholder="Value Y" id="input2">
+    </form>
     <div>
-        <input type="number" placeholder="Value X" id="input1">
         <button id="addtionBtn">+</button>
         <button id="subtractBtn">-</button>
         <button id="multiplyBtn">*</button>
         <button id="divideBtn">/</button>
     </div>
     <div>
-        <input type="number" placeholder="Value Y" id="input2">
         <button id="clearBtn">Clear</button>
     </div>
     <table>
